# short-url

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.override.yml
src/: lib.rs  main.rs
src/database/: database.rs  insert.rs  mod.rs  schema.rs
src/encode/: encode.rs
src/frontend/: template.rs
src/routes/: routes.rs
src/shorturl/: handler.rs
templates/: index.html  upload_csv.html  upload_template.html
