[package]
name = "short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
actix-web = "4"
actix-files = "0.6.4"
actix-http = "3.5.1"
actix-multipart="0.6.1"
env_logger = "0.10.0"
futures = "0.3"
#diesel = {version ="2.1.4", features = ["postgres"]}
dotenv = "0.15.0"
sha1 = "0.10.5"
uuid = {version="1.6.1", features = ["v4"]}
csv = "1.3.0"